--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -259,6 +259,7 @@
   
   .ReactTable .rt-tr {
     /* cursor: pointer; */
+    empty-cells: hide;
     -webkit-box-flex: 1;
     -ms-flex: 1 0 auto;
     flex: 1 0 auto;
