--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -1,6 +1,7 @@
 .container {
     position: relative;
     max-width: 100%;
+    max-height: 100%;
     margin: 0 auto;
   }
   
@@ -9,23 +10,23 @@
   .container .content {
     position: absolute;
     bottom: 138px;
-    background: rgb(0, 0, 0); /* Fallback color */
-    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5); 
     color: #f1f1f1;
-    width: 50%;
+    width: 54%;
     padding: 20px;
-    /* margin-left: 0; */
+    margin-left: -15px;
   }
   
   .container .content1 {
     position: absolute;
     bottom: 455px;
-    background: rgb(0, 0, 0); /* Fallback color */
-    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5); 
     color: #f1f1f1;
-    width: 50%;
+    width: 54%;
     padding: 20px;
-    /* margin-left: 0; */
+    margin-left: -15px;
   }
 
   .btn {
@@ -37,4 +38,38 @@
   color: #fff;
   background-color: transparent !important;
   border-color: none;
+}
+
+.image {
+  background-image: url("../../Asset/images/9.webp");
+  height: 625px;
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+.image1 {
+  background-image: url("../../Asset/images/10.webp");
+  height: 625px;
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+.image2 {
+  background-image: url("../../Asset/images/8.webp");
+  height: 625px;
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+.image3 {
+  background-image: url("../../Asset/images/6.webp");
+  height: 625px;
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
